[project]
name = "llama-proxy"
version = "0.1.0"
description = "Recording/replay proxy for llama.cpp/OpenAI-compatible test servers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "httpx>=0.27",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
llama-proxy = "llama_proxy.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llama_proxy"]
